<resources>
    <string name="app_name">WeatherApp</string>

    <!--Location-->
    <string name="submit_location">Go</string>
    <string name="toast_location_permission">Location permissions are required in order to provide services according to your current location.</string>
    <string name="toast_select_location">Please enter a location</string>

    <!--Weather-->
    <string name="temp_f">%1$s °F</string>
    <string name="description">%1$s</string>
    <string name="humidity">Humidity: \n%1$d\%%</string>
    <string name="pressure">Pressure: \n%1$s mb</string>
    <string name="precip_chance">Chance of rain: \n%1$d\%%</string>
    <string name="forecast">Forecast</string>
    <string name="forecast_summary">%1$s</string>

</resources>
