<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/day_gradient"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/tv_selected_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/offwhite"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/iv_weather_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_h25"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v25"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <ImageView
        android:id="@+id/iv_weather_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_h25"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_v25"
        android:src="@mipmap/clear_day"
        android:tint="@color/offwhite"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_h50"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v50"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_f"
        android:textStyle="bold"
        android:textColor="@color/offwhite"
        android:textSize="36sp"
        android:layout_marginBottom="36dp"
        app:layout_constraintTop_toTopOf="@id/iv_weather_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_v50"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textColor="@color/offwhite"
        android:textSize="24sp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_v50"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_h75"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_v75"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <!--Weather details 1-->

    <View
        android:id="@+id/v_details"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/offwhite"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        android:visibility="gone"/>

    <View
        android:id="@+id/spacer_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.025"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constrainedWidth="true"
        android:gravity="center"
        android:text="@string/humidity"
        android:textStyle="bold"
        android:textColor="@color/dayTextColor"
        android:layout_marginTop="18dp"
        android:elevation="1dp"
        android:background="@drawable/background_textview_day"
        app:layout_constraintWidth_percent="0.30"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@id/spacer_1"/>

    <View
        android:id="@+id/spacer_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.025"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@id/tv_humidity"/>

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constrainedWidth="true"
        android:gravity="center"
        android:text="@string/pressure"
        android:textStyle="bold"
        android:textColor="@color/dayTextColor"
        android:layout_marginTop="18dp"
        android:elevation="1dp"
        android:background="@drawable/background_textview_day"
        app:layout_constraintWidth_percent="0.30"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@+id/spacer_2"/>

    <View
        android:id="@+id/spacer_3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.025"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@id/tv_pressure"/>

    <TextView
        android:id="@+id/tv_chance_of_rain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constrainedWidth="true"
        android:gravity="center"
        android:text="@string/precip_chance"
        android:textStyle="bold"
        android:textColor="@color/dayTextColor"
        android:layout_marginTop="18dp"
        android:elevation="1dp"
        android:background="@drawable/background_textview_day"
        app:layout_constraintWidth_percent="0.30"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@+id/spacer_3" />

    <View
        android:id="@+id/spacer_4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintHorizontal_weight="0.025"
        app:layout_constraintTop_toBottomOf="@id/guideline_h75"
        app:layout_constraintStart_toEndOf="@id/tv_chance_of_rain"/>

    <!--Forecast Details 2-->

    <TextView
        android:id="@+id/tv_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/forecast"
        android:textStyle="bold"
        android:textColor="@color/dayTextColor"
        android:layout_marginTop="4dp"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity"
        app:layout_constraintStart_toStartOf="@id/tv_humidity"/>

    <ImageView
        android:id="@+id/iv_forecast_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:elevation="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_forecast"
        app:layout_constraintStart_toStartOf="@id/tv_forecast"
        android:tint="@color/dayTextColor" />

    <TextView
        android:id="@+id/tv_forecast_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constrainedWidth="true"
        android:text="@string/forecast_summary"
        android:textStyle="bold"
        android:textColor="@color/dayTextColor"
        android:gravity="center"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_forecast"
        app:layout_constraintStart_toEndOf="@id/iv_forecast_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>